deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calico-ui
  namespace: calico-system
  labels:
    app: calico-ui
spec:
  type: ClusterIP
  selector:
    app: calico-ui
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
